build_log.txt

> personal-website@0.0.0 build
> vite build

vite v8.0.10 building client environment for production...
[2Ktransforming...✓ 625 modules transformed.
✗ Build failed in 233ms
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid token in pseudo element: WhiteSpace(" ")
5892 |  }
5893 |  
5894 |    color: var(--text-primary);
     |           ^
5895 |    margin: 0;
5896 |  }
    at Module.<anonymous> (/Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/lightningcss/node/index.js:56:14)
    at minifyCSS (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/chunks/node.js:21304:59)
    at async finalizeCss (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/chunks/node.js:21149:36)
    at async Promise.all (index 1)
    at async Object.run (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/chunks/node.js:2435:22)
    at async PluginContextImpl.renderChunk (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/chunks/node.js:20685:19)
    at async plugin (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/rolldown/dist/shared/bindingify-input-options-DbbBhzky.mjs:1277:16)
    at async plugin.<computed> (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/rolldown/dist/shared/bindingify-input-options-DbbBhzky.mjs:1612:12)
    at aggregateBindingErrorsIntoJsError (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/rolldown/dist/shared/error-DL-e8-oE.mjs:48:18)
    at unwrapBindingResult (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/rolldown/dist/shared/error-DL-e8-oE.mjs:18:128)
    at #build (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/rolldown/dist/shared/rolldown-build-DSxL8qiP.mjs:3317:34)
    at async buildEnvironment (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/chunks/node.js:33018:64)
    at async Object.build (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/chunks/node.js:33440:19)
    at async Object.buildApp (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/chunks/node.js:33437:153)
    at async CAC.<anonymous> (file:///Users/eve/.gemini/antigravity/scratch/personal-website/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
